Promote project maturity: tests, CI, coverage, license, governance, nightly perf