@@ -1,8 +1,17 @@
-# PulseEngine (baseline)
+# PulseEngine
+
+[![CI](https://github.com/mozaika228/pulseengine/actions/workflows/ci.yml/badge.svg)](https://github.com/mozaika228/pulseengine/actions/workflows/ci.yml)
+[![Nightly Performance](https://github.com/mozaika228/pulseengine/actions/workflows/nightly-performance.yml/badge.svg)](https://github.com/mozaika228/pulseengine/actions/workflows/nightly-performance.yml)
+[![Coverage](https://codecov.io/gh/mozaika228/pulseengine/graph/badge.svg)](https://codecov.io/gh/mozaika228/pulseengine)
+[![License](https://img.shields.io/badge/license-Apache%202.0-blue.svg)](LICENSE)
 
 In-process single-symbol matching core for Java 21 with a staged Disruptor pipeline.
 
-Implemented now:
+## Maturity
+- Current release line: `0.2.0-SNAPSHOT`
+- CI, unit tests, coverage, and JMH automation are enabled.
+
+## Implemented now
 - price-time priority matching (single symbol)
 - limit, market, stop-market orders
 - TIF: GTC, IOC, FOK
@@ -13,32 +22,41 @@ Implemented now:
 - staged pipeline: `risk -> match -> market-data` on LMAX Disruptor
 - market data can run async on a dedicated ring/thread (`match -> md`) with L2 batching per batch boundary
 - top-of-book view (`TopOfBookView`) updated by market-data stage
-- binary market-data publisher (zero-copy style flyweight buffer):
+- binary market-data publisher (SBE schema-driven):
   - snapshot L2 message
   - incremental L2 delta message (only on change)
-- snapshot L2 depth-N message (periodic + initial)
-- incremental L3 message (`add/modify/cancel/trade`)
-  - SBE schema-driven encoding/decoding (generated codecs)
-- simple latency harness with HdrHistogram (`LatencyHarness`)
-- simple throughput demo (`PipelineDemo`)
+  - snapshot L2 depth-N message (periodic + initial)
+  - incremental L3 message (`add/modify/cancel/trade`)
+- latency harness (`LatencyHarness`)
+- throughput demo (`PipelineDemo`)
 - binary feed demo with decoder (`BinaryFeedDemo`)
 
-Run:
-- `mvn -q -DskipTests compile`
+## Run
+- `mvn -q -DskipTests=false verify`
 - `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=compile" "-Dexec.mainClass=io.pulseengine.app.LatencyHarness"`
 - `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=compile" "-Dexec.mainClass=io.pulseengine.app.PipelineDemo"`
 - PowerShell (SBE/Agrona runtime): `$env:MAVEN_OPTS='--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'; mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=compile" "-Dexec.mainClass=io.pulseengine.app.BinaryFeedDemo"`
 
-JMH benchmarks:
+## Tests and coverage
+- Unit tests: `src/test/java/io/pulseengine/core/OrderBookTest.java`
+- JaCoCo report: `target/site/jacoco/index.html`
+
+## JMH benchmarks
 - `mvn -q -DskipTests test-compile`
-- Core-only (`OrderBook` direct): `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=test" "-Dexec.mainClass=org.openjdk.jmh.Main" "-Dexec.args=CoreOrderBookBenchmark.iocCrossingOrder -wi 3 -i 5 -f 0 -tu ns"`
-- Pipeline (`enableMd=false|true`): `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=test" "-Dexec.mainClass=org.openjdk.jmh.Main" "-Dexec.args=PipelineBenchmark.iocCrossingOrder -p enableMd=false -wi 3 -i 5 -f 0 -tu ns"`
-- For `enableMd=true` add PowerShell runtime flags: `$env:MAVEN_OPTS='--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -Djmh.ignoreLock=true'`
+- Core-only: `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=test" "-Dexec.mainClass=org.openjdk.jmh.Main" "-Dexec.args=CoreOrderBookBenchmark.iocCrossingOrder -wi 3 -i 5 -f 0 -tu ns"`
+- Pipeline: `mvn -q org.codehaus.mojo:exec-maven-plugin:3.5.0:java "-Dexec.classpathScope=test" "-Dexec.mainClass=org.openjdk.jmh.Main" "-Dexec.args=PipelineBenchmark.iocCrossingOrder -p enableMd=false -wi 3 -i 5 -f 0 -tu ns"`
 
-SBE schema:
-- `src/main/resources/sbe/market-data-schema.xml`
+## CI automation
+- Build/test/coverage: `.github/workflows/ci.yml`
+- Nightly performance regression checks: `.github/workflows/nightly-performance.yml`
 
-Not yet HFT-final:
+## Governance
+- Changelog: `CHANGELOG.md`
+- Contributing guide: `CONTRIBUTING.md`
+- Security policy: `SECURITY.md`
+- License: `LICENSE`
+
+## Not yet HFT-final
 - no Aeron/UDP transport
 - no persistence/replay
 - still not fully wait-free/garbage-free in all paths
